[package]
name = "inflate"
version = "0.3.4"
license = "MIT"
description = "DEFLATE decoding"
authors = ["nwin <nwin@users.noreply.github.com>"]
repository = "https://github.com/PistonDevelopers/inflate.git"
keywords = ["deflate", "decompression", "compression", "piston"]

[features]
default = []
unstable = []

[dependencies]
adler32 = "1.0.0"
